# LEI-1Semestre

./: .gitignore  .gitmodules  README.md
LEI 1ano/1 Semestre/LI2324/: Gloss.hs  Gloss_Exemplo1.hs  LI1.hs  LI2.hs  LI3.hs  Q8a107293.hs  Q9e10-a107293.hs  experiment.hs  tictactoe.hs
LEI 1ano/1 Semestre/LI2425/2024li1g001-backup/: README.md  immutable-towers.cabal
LEI 1ano/1 Semestre/LI2425/2024li1g001-backup/app/: Desenhar.hs  Eventos.hs  ImmutableTowers.hs  Main.hs  Tempo.hs
LEI 1ano/1 Semestre/LI2425/2024li1g001-backup/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
LEI 1ano/1 Semestre/LI2425/2024li1g001-backup/dist-newstyle/packagedb/ghc-9.4.8/: immutable-towers-0.0.0.0-inplace.conf  package.cache
LEI 1ano/1 Semestre/LI2425/2024li1g001-backup/lib/: LI12425.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs
LEI 1ano/1 Semestre/LI2425/2024li1g001-backup/test/: Spec.hs  Tarefa1Spec.hs  Tarefa2Spec.hs  Tarefa3Spec.hs
LEI 1ano/1 Semestre/LI2425/classes/: makefile
LEI 1ano/1 Semestre/LI2425/classes/doc/: doc-index.html  index.html
LEI 1ano/1 Semestre/LI2425/classes/src/: HelloW.hs  ficha2.hs  ficha3.hs  mini_teste3.hs
LEI 1ano/1 Semestre/LI2425/classes/tests/: ficha4_Spec.hs
LEI 1ano/1 Semestre/LI2425/doc/: Ficha4.html
LEI 1ano/1 Semestre/LI2425/src/: ficha4.hs  ficha5.hs  mini_teste2.hs  mini_teste3.hs
LEI 1ano/1 Semestre/LI2425/tests/: mini_teste2_Spec.hs  mini_teste3_Spec.hs
LEI 1ano/1 Semestre/PF/: 50q.hs  50questoes.hs  BTree.hs  PF14.hs  aula.hs  ficha1.hs  ficha2.hs  ficha3.hs  ficha4OrdemSuperior.hs  ficha5.hs  ficha6.hs  ficha7.hs  ficha8.hs  ficha9.hs  ordemsuperior.hs  sessaoduvidas.hs
LEI 1ano/1 Semestre/PF/Teste/: ficha3.hs  ficha6.hs  teste21_22.hs  teste22_23.hs
LEI 1ano/2 Semestre/PI/: twoSum.c
LEI 2ano/1 Semestre/AlgC/: Makefile  ficha4.c
LEI 2ano/1 Semestre/AlgC/src/: ficha3.c  ficha4.c  teste2_2019.c  teste2_2022.c  teste2_2023.c  teste2_2024.c  v2ficha4.c
LEI 2ano/1 Semestre/LI3/deque_base/: Makefile  command.txt
LEI 2ano/1 Semestre/LI3/deque_base/src/: command_parser.c  main.c
LEI 2ano/LI3/deque_base/src/: deque.c
