cabal-version:      3.4
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.

name:               immutable-towers

version:            0.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            NONE

-- The package author(s).
author:             Sívio João Freitas Pontes <a100762@alunos.uminho.pt>
                    Hugo Ferreira Soares <a107293@alunos.uminho.pt>


category:           Game
build-type:         Simple

extra-doc-files:    README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:
        LI12425
        Tarefa1
        Tarefa2
        Tarefa3

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.17.2.1,
        random ^>=1.2.1.1

    hs-source-dirs:   lib
    default-language: GHC2021

executable immutable-towers
    import:           warnings

    -- Modules included in this executable, other than Main.
    other-modules:
        ImmutableTowers
        Desenhar
        Eventos
        Tempo

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.1,
        gloss ^>=1.13.2.1,
        immutable-towers

    hs-source-dirs:   app

    default-language: GHC2021

test-suite immutable-towers-test
    import:           warnings

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Modules included in this executable, other than Main.
    other-modules:
        Tarefa1Spec
        Tarefa2Spec
        Tarefa3Spec

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    main-is:          Spec.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.17.2.1,
        HUnit ^>=1.6.2.0,
        gloss ^>=1.13.2.1,
        immutable-towers

    hs-source-dirs:   test

    default-language: GHC2021
